--- a/arch/arm/configs/kona_01_defconfig
+++ b/arch/arm/configs/kona_01_defconfig
@@ -42,7 +42,7 @@ CONFIG_ZRAM_FOR_ANDROID=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="/usr/local/arm/arm-eabi-4.4.3/bin/arm-eabi-"
-CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION="-DoubleshotKERNEL v1.0-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
