--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -717,7 +717,7 @@ CONFIG_GENERIC_ACL=y
 CONFIG_DEBUG_KERNEL=y
 CONFIG_SAMSUNG_MUIC=y
 CONFIG_COMPAT_BRK=y
-CONFIG_LOCALVERSION="-DoubleshotKERNEL_v1.0-"
+CONFIG_LOCALVERSION=""
 CONFIG_MACH_NO_WESTBRIDGE=y
 CONFIG_CRYPTO=y
 CONFIG_FUNCTION_TRACER=y
