--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -123,6 +123,10 @@ config CPU_FREQ_DEFAULT_GOV_PEGASUSQ
 	bool "pegasusq"
 	select CPU_FREQ_GOV_PEGASUSQ
 
+config CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND
+	bool "intellidemand"
+	select CPU_FREQ_GOV_INTELLIDEMAND
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -283,6 +287,10 @@ config CPU_FREQ_DVFS_MONITOR
 	help
 	  This option adds a proc node for dvfs monitoring.
 	  /proc/dvfs_mon
+
+config CPU_FREQ_GOV_INTELLIDEMAND
+tristate "'intellidemand' cpufreq governor"
+depends on CPU_FREQ
 
 
 menu "x86 CPU frequency scaling drivers"
