--- a/.config
+++ b/.config
@@ -813,7 +813,7 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 # CONFIG_CPU_FREQ_GOV_SLP is not set
 CONFIG_CPU_FREQ_DVFS_MONITOR=y
-# CONFIG_CPU_FREQ_GOV_INTELLIDEMAND is not set
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
